--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,53 +1,35 @@
 name: SonarCloud CI
- 
+
 on:
-
   push:
-
     branches: [ main ]
-
   pull_request:
-
     types: [opened, synchronize, reopened]
- 
+
 jobs:
-
   build:
-
     name: Build and analyze
-
     runs-on: ubuntu-latest
- 
+
     steps:
+      - uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '17'
 
-    - name: Set up JDK
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
 
-      uses: actions/setup-java@v3
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: Bevin215
+          SONAR_ORGANIZATION: Leave-Notification-App-Dev
 
-      with:
-
-        distribution: temurin
-
-        java-version: '17'
-
-    - name: Cache SonarCloud packages
-
-      uses: actions/cache@v3
-
-      with:
-
-        path: ~/.sonar/cache
-
-        key: ${{ runner.os }}-sonar
-
-    - name: SonarCloud Scan
-
-      uses: sonarsource/sonarcloud-github-action@master
-
-      env:
-
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
- 
