--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: sonarsource/sonarqube-scan-action@v1
+      - uses: uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
