--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,7 +2,8 @@ name: SonarCloud CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '**'
   pull_request:
     types: [opened, synchronize, reopened]
 
