--- a/LeaveAppUI/package.json
+++ b/LeaveAppUI/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@ng-select/ng-select": "^11.0.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
