--- a/LeaveAppUI/angular.json
+++ b/LeaveAppUI/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/leave-app-ui",
+            "outputPath": "dist/leave-app-ui/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
